# my-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: README.md  requirements-venv.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_name}}/docs/: conf.py  index.rst
{{cookiecutter.project_name}}/src/{{cookiecutter.namespace}}/{{cookiecutter.package_name}}/: __init__.py  my_module.py
