[metadata]
name = {{ cookiecutter.namespace_package }}
description = {{ cookiecutter.project_description }}
long_description = file: README.me
long_description_content_type = text/markdown
author = {{ cookiecutter.author_github_username }}
author_email = {{ cookiecutter.author_email }}
url = https://github.com/{{cookiecutter.author_github_username}}/{{cookiecutter.project_name}}
classifiers = 
    Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir = 
    = src
include_package_data = True
zip_safe = False
install_requires = 
    pandas # add your dependencies

[options.packages.find]
where = src
exclude = 
    {{ namespace }}

[options.package_data]
{{ cookiecutter.namespace_package}} = py.typed

[coverage:run]
branch = True
source = 
    src/
    tests/
omit = 
    */{{ cookiecutter.namespace }}/{{ cookiecutter.package_name }}


[coverage:paths]
source = 
    src/

[coverage:report]
show_missing = True
fail_under = 100
exclude_lines = 
    pragma: no cover
    if TYPE_CHECKING:

[mypy]

[mypy-tenacity]
ignore_errors = True

[flake8]
max-line-length = 140
max-complexity = 10
import-order-style = google
application-import-names = {{ cookiecutter.namespace_package }}
ignore = 
    D202,
    D203,
    E203,
    W503,
exclude=
    .tox,
    .git,
    __pycache__,
    docs/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *egg-info,
    .cache,
    .eggs

#pylint
[MESSAGE CONTROL]
disable = 
    C103,
    C0330,
    C0411,
    C0412,
    R0201,
    R0801,
    R0902,
    R0903,
    R0904,
    R0913,
    R0914,
    W0232,
    W0511,
    WO621

[REPORTS]
ouput-format = colorized
reports = y
include-ids = yes